# EchoNote

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml
apps/: __init__.py
apps/account/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_alter_profile_table_comment_alter_user_table_comment_and_more.py
apps/blog/: __init__.py  admin.py  apps.py  forms.py  models.py  sitemaps.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_category_version_comment_version_post_version.py  0003_post_excerpt.py  0004_alter_category_table_comment_and_more.py
apps/blog/tests/: test_blog.py
apps/common/: apps.py  models.py
config/: config.toml
docker/postgres/: Dockerfile  init-extensions.sql
echo/: asgi.py  config.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.mo  django.po
static/css/: site.css
templates/: base.html  robots.txt  rss.xml
templates/account/: login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_subject.txt  profile.html  signup.html
templates/blog/: post_detail.html  post_list.html
